# sge

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Caddyfile.example  Dockerfile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  entrypoint.sh  estoque.xlsx  estoque_inicial.csv  importar_estoque.py  index.html  main.py  pyproject.toml  readme.md  requirements.txt  soul.md  vercel.json
.github/workflows/: backend-tests.yml  deploy-pages.yml
api/: .env  app_cache.py  auth.py  crud.py  database.py  index.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
api/api/: index.py
api/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/routers/: auth.py  categorias.py  dashboard.py  importacao_xml.py  movimentacoes.py  produtos.py  tags.py  usuarios.py
api/tests/: conftest.py  test_auth.py  test_movimentacoes.py  test_produtos.py  test_usuarios.py
core/: settings.py  urls.py
data/: db.sqlite3
docs/: CNAME  index.html  login.html  movimentacoes.html  produtos.html
docs/css/: style.css
docs/js/: api.js  app.js  auth.js  dashboard.js  layout.js  movimentacoes.js  router.js
estoque/: admin.py  apps.py  context_processors.py  log_utils.py  models.py  signals.py  tests.py  urls.py  views.py  xml_parser.py
estoque/migrations/: 0001_initial.py  0002_produto_preco_custo_produto_preco_venda.py  0003_historicopreco.py  (+9 more)
js/: api.js
omie/: __init__.py  admin.py  apps.py  crypto.py  models.py  services.py  tests.py  urls.py  views.py
public/: 404.html  index.html  login.html  vercel.json
scripts/: build-frontend-config.mjs
(+68 files in other folders)
