[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.30.6",
]
